Fix header layout shift

--- a/src/main-sections/hero/hero.scss
+++ b/src/main-sections/hero/hero.scss
@@ -5,21 +5,21 @@
 section.hero {
   --angle: 2deg;
   display: grid;
-  overflow: hidden;
+  grid-template-areas: '. header .' '. hero .' '. . .';
+  grid-template-rows: 80px 1fr 80px;
+  grid-template-columns: 1fr Min($content-width, 100vw) 1fr;
+  grid-auto-flow: row;
+  grid-row-gap: 0;
+  align-items: center;
+  justify-content: center;
   width: 100vw;
   max-width: none;
   height: vh(100);
   min-height: 568px;
   max-height: 1200px;
-  align-items: center;
-  justify-content: center;
   margin-bottom: 32px;
+  overflow: hidden;
   color: $white;
-  grid-auto-flow: row;
-  grid-row-gap: 0;
-  grid-template-areas: '. header .' '. hero .' '. . .';
-  grid-template-columns: 1fr Min($content-width, 100vw) 1fr;
-  grid-template-rows: 80px 1fr 80px;
   text-align: center;
 
   @media screen and (max-width: $breakpoint-small) {
@@ -53,13 +53,13 @@ section.hero {
   .hero-contents {
     position: relative;
     display: grid;
+    grid-area: hero;
+    grid-template-areas: '.' 'title' 'tagline' '.';
+    grid-template-rows: repeat(4, auto);
+    grid-template-columns: 1fr;
     justify-content: center;
     font-family: var(--font-sans);
     font-weight: 400;
-    grid-area: hero;
-    grid-template-areas: '.' 'title' 'tagline' '.';
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(4, auto);
     pointer-events: none;
 
     %hero-element {
@@ -69,20 +69,21 @@ section.hero {
 
     .title {
       @extend %hero-element;
+      grid-area: title;
       margin: 0 16px;
       font-size: clamp(50px, 16vw, 96px);
       font-weight: 600;
-      grid-area: title;
+      line-height: 1.5em;
     }
     
     .tagline {
       @extend %hero-element;
+      grid-area: tagline;
       max-width: calc(100vw - 32px);
       margin: 0 16px;
       font-family: inherit;
       font-size: clamp(16px, 6vw, 24px);
       font-weight: 400;
-      grid-area: tagline;
       line-height: 1.2em;
       text-align: center;
     }
@@ -90,12 +91,12 @@ section.hero {
     .big-letters {
       @extend %hero-element;
       display: grid;
+      grid-row: 1/-1;
+      grid-column: 1/-1;
       margin: 0;
-      color: $dark_green;
       font-size: 512px;
       font-weight: 600;
-      grid-column: 1/-1;
-      grid-row: 1/-1;
+      color: $dark_green;
       opacity: 0.15;
       place-items: center;
     }
